fix: margins on mobile

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,6 +1,6 @@
 .main {
   max-width: fit-content;
-  margin: 3rem auto;
+  margin: 3rem auto 8rem;
 
   display: flex;
   flex-direction: column;
@@ -12,13 +12,13 @@
 
 @media screen and (min-width: 810px) {
   .main {
-    margin: 6rem auto;
+    margin: 6rem auto 8rem;
   }
 }
 
 @media screen and (min-width: 1438px) {
   .main {
-    margin: 10rem auto;
+    margin: 10rem auto 8rem;
   }
 }
 
